Fix very bad reflow problem in nsBoxToBlockAdaptor (bug 119849).  r=hewitt@netscape.com, sr=attinasi@netscape.com